fix the error in dummy link

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                   </p>
 
                   <div class="about__buttons">
-                     <a href="#https://docs.google.com/forms/d/e/1FAIpQLSc0glfM6PBbaM4wjdSgmFhDtd7ioSnyZvpqv8vtvhdwQLjOVg/viewform" class="button">
+                     <a href="https://docs.google.com/forms/d/e/1FAIpQLSc0glfM6PBbaM4wjdSgmFhDtd7ioSnyZvpqv8vtvhdwQLjOVg/viewform" class="button">
                         <i class="ri-send-plane-line"></i>Join Us!
                         
                      </a>
