add until projetcs

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <header class="header" id="header">
          <nav class="nav container">
             <a href="#" class="nav__logo">
-               <span class="nav__logo-circle">P</span>
+               <span class="nav__logo-circle"><img src="assets/img/logopeta.png" alt=""></span>
                <span class="nav__logo-name">PetaCareers</span>
             </a>
 
@@ -148,12 +148,165 @@
 
          <!--==================== Core Value Peta ====================-->
          <section class="services section">
-            
+            <h2 class="section__title-2">
+               <Span>Our Core Values</Span>
+            </h2>
+
+            <div class="services__container container grid">
+               <article class="services__card">
+                  <div class="services__border"></div>
+
+                  <div class="services__content">
+                     <div class="services__icon">
+                        <div class="services__box"></div>
+                        <i class="ri-line-chart-fill"></i>
+                     </div>
+
+                     <h2 class="services__title">Growth</h2>
+
+                     <p class="services__description">
+                        There is always room for improvement in Peta Careers. Everyone, regardless of role, is a beginner. 
+                        One of our desired outcomes is to grow together.
+                     </p>
+                  </div>
+               </article>
+
+               <article class="services__card">
+                  <div class="services__border"></div>
+
+                  <div class="services__content">
+                     <div class="services__icon">
+                        <div class="services__box"></div>
+                        <i class="ri-lightbulb-fill"></i>
+                     </div>
+
+                     <h2 class="services__title">Innovation</h2>
+
+                     <p class="services__description">
+                        With a team of brilliant minds surrounding us, our environment is fruitful and exciting. 
+                        In addition, everyone has an equal opportunity to share their ideas.
+                     </p>
+                  </div>
+               </article>
+
+               <article class="services__card">
+                  <div class="services__border"></div>
+
+                  <div class="services__content">
+                     <div class="services__icon">
+                        <div class="services__box"></div>
+                        <i class="ri-crosshair-2-fill"></i>
+                     </div>
+
+                     <h2 class="services__title">Vibrant</h2>
+
+                     <p class="services__description">
+                        We are here for one reason: to leave a lasting impact on Indonesia's future generations. 
+                        That is the origin of our fervent motivation and spirit.
+                     </p>
+                  </div>
+               </article>
+
+               <article class="services__card">
+                  <div class="services__border"></div>
+
+                  <div class="services__content">
+                     <div class="services__icon">
+                        <div class="services__box"></div>
+                        <i class="ri-user-5-line"></i>
+                     </div>
+
+                     <h2 class="services__title">Empathy</h2>
+
+                     <p class="services__description">
+                        By understanding our peers, users, and partners, we can go the extra mile together
+                     </p>
+                  </div>
+               </article>
+            </div>
          </section>
 
          <!--==================== PROJECTS ====================-->
          <section class="projects section" id="projects">
-            
+            <h2 class="section__title-1">
+               <span>Our Projects</span>
+            </h2>
+
+            <div class="projects__container container grid">
+               <article class="projects__card">
+                  <div class="projects__image">
+                     <img src="assets/img/Poster MSIB new crop.png" alt="MSIB" class="projects__img">
+
+                     <a href="#" class="projects__button button">
+                        <i class="ri-arrow-right-up-line"></i>
+                     </a>
+                  </div>
+
+                  <div class="projects__content">
+                     <h3 class="projects__subtitle">Mentoring</h3>
+                     <h2 class="projects__name">MSIB Mentoring</h2>
+
+                     <p class="projects__description">
+                        Directing and advising about the world of work, soft skills, and tips and tricks through mentoring sessions.
+                     </p>
+                  </div>
+
+                  <div class="projects__buttons">
+                     <a href="https://www.instagram.com/p/Cs_Lw9UpSeY/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==" target="_blank" class="projects__link">
+                        <i class="ri-instagram-line"></i> view
+                  </div>
+               </article>
+
+               <article class="projects__card">
+                  <div class="projects__image">
+                     <img src="assets/img/CV REVIEW! crop.png" alt="CV Review" class="projects__img">
+
+                     <a href="#" class="projects__button button">
+                        <i class="ri-arrow-right-up-line"></i>
+                     </a>
+                  </div>
+
+                  <div class="projects__content">
+                     <h3 class="projects__subtitle">Product</h3>
+                     <h2 class="projects__name">CV Review</h2>
+
+                     <p class="projects__description">
+                        We know how important a CV is when preparing for a career path, therefore we provide services to help students 
+                        with what to do and not to do in making a CV by conducting a review
+                     </p>
+                  </div>
+
+                  <div class="projects__buttons">
+                     <a href="https://www.instagram.com/p/CxVPGyOphuu/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==" target="_blank" class="projects__link">
+                        <i class="ri-instagram-line"></i> view
+                  </div>
+               </article>
+
+               <article class="projects__card">
+                  <div class="projects__image">
+                     <img src="assets/img/Company talk crop.png" alt="Company Talk" class="projects__img">
+
+                     <a href="#" class="projects__button button">
+                        <i class="ri-arrow-right-up-line"></i>
+                     </a>
+                  </div>
+
+                  <div class="projects__content">
+                     <h3 class="projects__subtitle">Webinar</h3>
+                     <h2 class="projects__name">Company Talk</h2>
+
+                     <p class="projects__description">
+                        A development through knowledge sharing by inviting the community/company to discuss the criteria for candidates that the company is interested in, 
+                        the stages of recruitment and any recruitment programs provided by the company.
+                     </p>
+                  </div>
+
+                  <div class="projects__buttons">
+                     <a href="https://www.instagram.com/p/CuhIxpkpIwa/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==" target="_blank" class="projects__link">
+                        <i class="ri-instagram-line"></i> view
+                  </div>
+               </article>
+            </div>
          </section>
 
          <!--==================== CONTACT ====================-->
