added WA buttone

--- a/index.html
+++ b/index.html
@@ -327,9 +327,10 @@
                      Let's join our <b>whatsapp group</b> to get the latest information about our product and job recruitment!
                   </p>
 
-                  <p class="contact__description-2">
-                     Let's join our <b>whatsapp group</b> to get the latest information about our product and job recruitment!
-                  </p>
+                  <div class="about__buttons">
+                     <a href="https://chat.whatsapp.com/Lm85rmZfw5gBzXuSsvMi1l " class="button">
+                        <i class="ri-whatsapp-line"></i>Join Our Group!</a>
+                  </div>
                   <div class="geometric-box"></div>
                </div>
 
